syntax = "proto3";

package go.micro.service.order;

service Order {
	rpc GetOrderByID(OrderID) returns (OrderInfo) {}
	rpc GetAllOrder(RequestAllOrder) returns (ResponseAllOrder) {}
	rpc CreateOrder(OrderInfo) returns (OrderID) {}
	rpc DeleteOrderByID(OrderID) returns (ResponseMessage) {}
	rpc UpdateOrderPayStatus(RequestPayStatus) returns (ResponseMessage) {}
	rpc UpdateOrderShipStatus(RequestShipStatus) returns (ResponseMessage) {}
	rpc UpdateOrder(OrderInfo) returns (ResponseMessage) {}
}

message RequestAllOrder {

}

message ResponseAllOrder {
	repeated OrderInfo order_info = 1;
}

message OrderID {
	int64 order_id = 1;
}

message OrderInfo {
	int64 id = 1;
	int32 pay_status = 2;
	int32 ship_status = 3;
	double price = 4;
	repeated OrderDetail order_detail = 5;
}

message OrderDetail {
	int64 id = 1;
	int64 product_id = 2;
	int64 product_num = 3;
	int64 product_size_id = 4;
	int64 product_price = 5;
	int64 order_id = 6;
}

message ResponseMessage {
	string msg = 1;
}

message RequestPayStatus {
	int64 order_id = 1;
	int32 pay_status = 2;
}

message RequestShipStatus {
	int64 order_id = 1;
	int32 ship_status = 2;
}
